fix : tcwhite accessibility contrast

--- a/style.css
+++ b/style.css
@@ -775,7 +775,7 @@ h4 {
 }
 
 .tc-white {
-    color: rgb(243, 200, 179) !important;
+    color: rgb(244, 236, 231) !important;
 }
 
 .btn-atomic-tangerine {
